# data-modeling

./: main.ipynb  pyproject.toml  synth_ad_data.csv  synth_feed_data.csv
.ipynb_checkpoints/: main-checkpoint.ipynb
iframe_figures/: figure_33.html  figure_34.html  figure_35.html  figure_36.html  figure_42.html  figure_43.html  figure_44.html  figure_53.html  figure_54.html  figure_63.html
