[tool.poetry]
name = "ucla-hack"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
pycryptodome = "^3.20.0"
notebook = "^7.2.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.9.0"
scikit-learn = "^1.5.0"
polars = "^0.20.30"
hvplot = "^0.10.0"
pyarrow = "^16.1.0"
sdv = "^1.14.0"
tqdm = "^4.66.4"
bokeh = "^3.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
